--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<html>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+	<title>Template.io</title>
+	<script src="https://kit.fontawesome.com/07db56e3c0.js" crossorigin="anonymous"></script>
+</head>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<body>
+	<div id="template"></div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+	<!-- <div class="container" style="background-color: rgb(255, 0, 0)">
+		<input type="text" placeholder="Instance Name" class="bi-input-cursor-text" />
+		<input type="color" />
+		<div class="container">
+			<ul>
+				<li>VEP Instance 1</li>
+				<li>1 Samplers</lid=>
+				<li>0 Tracks</li>
+			</ul>
+		</div>
+		<div class="container">
+			<div class="container btn-toolbar">
+				<div class="container btn-group">
+					<button class="btn btn-primary btn-sm">
+						<i onclick="removeInstance(this.id)" title="Remove Instance" class="fa-solid fa-circle-minus"></i>
+					</button>
+					<button class="btn btn-primary btn-sm">
+						<i onclick="addInstance(this.id)" title="Add Instance" class="fa-solid fa-circle-plus"></i>
+					</button>
+				</div>
+			</div>
+			<div class="container-fluid">
+				<div class="container">
+					<input type="text" placeholder="Multi Name" class="bi-input-cursor-text" />
+					<input type="color" class="bi-input-cursor" />
+					<div class="container">
+						<p>Sampler 1:</p>
+						<select class="form-select-sm">
+							<option value="Native Instruments Kontakt">Native Instruments Kontakt</option>
+							<option value="Vienna Instruments">Vienna Instruments</option>
+						</select>
+						<p> 0 Tracks</p>
+						<div class="container">
+							<div class="container btn-group">
+								<button class="btn btn-primary btn-sm">
+									<i onclick="removeTrack(this.id)" title="Remove Instance" class="fa-solid fa-circle-minus"></i></button>
+								<button class="btn btn-primary btn-sm">
+									<i onclick="addTrack(this.id)" title="Add Instance" class="fa-solid fa-circle-plus"></i>
+								</button>
+							</div>
+						</div>
+					</div>
+					<div class="container">
+						<div class="container btn-group">
+							<button class="btn btn-primary btn-sm">
+								<i onclick="removeTrack(this.id)" title="Remove Instance" class="fa-solid fa-circle-minus"></i>
+							</button>
+							<button class="btn btn-primary btn-sm">
+								<i onclick="addTrack(this.id)" title="Add Instance" class="fa-solid fa-circle-plus"></i>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div> -->
+
+</body>
+
 </html>
