--- a/public/index.html
+++ b/public/index.html
@@ -7,67 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 	<title>Template.io</title>
 	<script src="https://kit.fontawesome.com/07db56e3c0.js" crossorigin="anonymous"></script>
+	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 </head>
 
 <body>
 	<div id="template"></div>
-
-	<!-- <div class="container" style="background-color: rgb(255, 0, 0)">
-		<input type="text" placeholder="Instance Name" class="bi-input-cursor-text" />
-		<input type="color" />
-		<div class="container">
-			<ul>
-				<li>VEP Instance 1</li>
-				<li>1 Samplers</lid=>
-				<li>0 Tracks</li>
-			</ul>
-		</div>
-		<div class="container">
-			<div class="container btn-toolbar">
-				<div class="container btn-group">
-					<button class="btn btn-primary btn-sm">
-						<i onclick="removeInstance(this.id)" title="Remove Instance" class="fa-solid fa-circle-minus"></i>
-					</button>
-					<button class="btn btn-primary btn-sm">
-						<i onclick="addInstance(this.id)" title="Add Instance" class="fa-solid fa-circle-plus"></i>
-					</button>
-				</div>
-			</div>
-			<div class="container-fluid">
-				<div class="container">
-					<input type="text" placeholder="Multi Name" class="bi-input-cursor-text" />
-					<input type="color" class="bi-input-cursor" />
-					<div class="container">
-						<p>Sampler 1:</p>
-						<select class="form-select-sm">
-							<option value="Native Instruments Kontakt">Native Instruments Kontakt</option>
-							<option value="Vienna Instruments">Vienna Instruments</option>
-						</select>
-						<p> 0 Tracks</p>
-						<div class="container">
-							<div class="container btn-group">
-								<button class="btn btn-primary btn-sm">
-									<i onclick="removeTrack(this.id)" title="Remove Instance" class="fa-solid fa-circle-minus"></i></button>
-								<button class="btn btn-primary btn-sm">
-									<i onclick="addTrack(this.id)" title="Add Instance" class="fa-solid fa-circle-plus"></i>
-								</button>
-							</div>
-						</div>
-					</div>
-					<div class="container">
-						<div class="container btn-group">
-							<button class="btn btn-primary btn-sm">
-								<i onclick="removeTrack(this.id)" title="Remove Instance" class="fa-solid fa-circle-minus"></i>
-							</button>
-							<button class="btn btn-primary btn-sm">
-								<i onclick="addTrack(this.id)" title="Add Instance" class="fa-solid fa-circle-plus"></i>
-							</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div> -->
-
 </body>
 
 </html>
