--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,16 @@
 <html>
 
 <head>
+	<title>Template.io</title>
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="theme-color" content="#000000" />
+	<meta name="description" content="Template.io Application" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-	<title>Template.io</title>
-	<script src="https://kit.fontawesome.com/07db56e3c0.js" crossorigin="anonymous"></script>
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+	<script src="https://kit.fontawesome.com/07db56e3c0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
