--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 	<script src="https://kit.fontawesome.com/07db56e3c0.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="bg-main-sand overscroll-none overflow-x-hidden">
 	<div id="template"></div>
 </body>
 
