starting to get some actual ui and functionality now!

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
 	<script src="https://kit.fontawesome.com/07db56e3c0.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
-	<div id="template" class=""></div>
+<body class="">
+	<div id="template"></div>
 </body>
 
 </html>
