--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="theme-color" content="#000000" />
-	<meta name="description" content="Template.io Application" />
+	<meta name="Template.io" content="Template.io Application" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
