converted scss to css and moved all tailwind stuff in index.css to inline/template literals

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="">
-	<div id="template"></div>
+	<div id="template" class="bg-main-sand dark:bg-zinc-700"></div>
 </body>
 
 </html>
